--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/project?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false&serverTimezone=UTC&useSSL=true
+    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/stomp?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false&serverTimezone=UTC&useSSL=true
     username: root
     password: root
     driver-class-name: net.sf.log4jdbc.DriverSpy
@@ -12,6 +12,28 @@ spring:
       idle-timeout: 60000
       maximum-pool-size: 100
       minimum-idle: 5
-
+  ## freemarker 相关配置
+  freemarker:
+    cache: true
+    template-loader-path: classpath:/template/
+    settings:
+      template_update_delay: 60s
+      number_format: 0.##
+      default_encoding: UTF-8
+      output_encoding: UTF-8
+      url_escaping_charset: UTF-8
+      locale: zh_CN
+      time_format: HH:mm:ss
+      date_format: yyyy-MM-dd
+      datetime_format: yyyy-MM-dd HH:mm:ss
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html
+    suffix: .ftl
+## mybatis相关配置
 mybatis:
   mapper-locations:
+    - classpath*:mapper/**/*.xml
+## 权限相关配置
+shiro:
+  loginUrl: /login
