--- a/src/main/resources/baofu.properties
+++ b/src/main/resources/baofu.properties
@@ -4,3 +4,4 @@ password=100026363_899090
 orgNo=100026363
 merchantNo=100026363
 terminalNo=200001510
+awakeUrl=https://account.baofoo.com/api/wallet/v3.0.0/login
