--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
             <artifactId>jaxp-api</artifactId>
             <version>1.4.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
