--- a/src/main/resources/crypt/baofu.properties
+++ b/src/main/resources/crypt/baofu.properties
@@ -4,4 +4,8 @@ password=100026363_899090
 orgNo=100026363
 merchantNo=100026363
 terminalNo=200001510
+## h5唤醒地址
 awakeUrl=https://account.baofoo.com/api/wallet/v3.0.0/login
+enterpriseOpenUrl=https://account.baofoo.com/api/merchant/v1/apply
+## 企业异步回调地址(由三方平台自定义)
+enterpriseNotifyUrl=https://account.baofoo.com/api/wallet/v3.0.0/login
